<resources>
    <string name="app_name">InterProject</string>
    <string name="helloIntern">Hello!</string>
    <string name="welComeIntern">Welcome to YoParker</string>
    <string name="curntLocat">Your Current Locations</string>
    <string name="otherLocat">Some other locations</string>
    <string name="otpConfirmedTxt">OTP Confirmed</string>
    <string name="verificationSuccessfulTxt">VERIFICATION SUCCESSFUL !</string>
    <string name="okTxt">OK</string>
    <string name="registerTxt">Realiable Parking and Easy to access</string>
    <string name="loginSignupTxt">LOGIN / SIGNUP</string>
    <string name="verificationCodeTitleTxt">Verification Code</string>
    <string name="continueTxt">CONTINUE</string>
    <string name="verificationCodeMessageTxt">Please type the verification code sent to your number</string>
    <string name="resendCodeText">Resend Code</string>
    <string name="apptitlename">Banglore</string>
    <string name="parking">Parking</string>
    <string name="booking">Booking</string>
    <string name="wallets">Wallets</string>
    <string name="me">Me</string>
    <string name="appTitleName">YoParker</string>
    <string name="drawerHomeName">HOME</string>
    <string name="drawerDashboard">DASHBOARD</string>
    <string name="drawerAboutUs">ABOUT US</string>
    <string name="drawerLogoutName">LOGOUT</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="myBookingDrawer">My Booking</string>
    <string name="findMyVehicle">Find My Vehicle</string>
    <string name="rentYourSpot">Rent Your Spot</string>
    <string name="drawerRentParking">Rent Parking</string>
    <string name="weListen">We Listen</string>
    <string name="drawerLogout">Logout</string>
    <string name="drawerSettings">Settings</string>
    <string name="drawerRateUs">Rate Us</string>
    <string name="drawerShare">Share</string>
    <string name="drawerReferAndEarn">Refer and Earn</string>
    <string name="drawerFeedback">Feedback</string>
    <string name="drawerHello">Hello !</string>
</resources>