<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".otp_Confirmation_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/otp_confirmation_background"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:id="@+id/otpConfirmed"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="375dp"
            android:gravity="center"
            android:shadowColor="#00B2F8"
            android:text="@string/otpConfirmedTxt"
            android:textColor="@color/thirdColor"
            android:textSize="25sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/verificationSuccessful"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/verificationSuccessfulTxt"
            android:textColor="@color/thirdColor"
            android:textSize="25sp"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/confirmation_ok_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/main_button_pattern"
            android:text="@string/okTxt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="normal" />

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>