<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transparent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:onClick="ClickLogo"
        android:shape="ring"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/drawerAppTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appTitleName"
        android:textAlignment="center"
        android:textColor="@color/thirdColor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/secondaryColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickHome">

        <TextView
            android:id="@+id/drawerHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/drawerHomeName"
            android:textColor="@color/thirdColor"
            android:textSize="18dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_baseline_home_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickDashboard">

        <TextView
            android:id="@+id/drawerDashboard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/drawerDashboard"
            android:textColor="@color/thirdColor"
            android:textSize="18dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_dashboard"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickAbout">

        <TextView
            android:id="@+id/drawerAbout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/drawerAboutUs"
            android:textColor="@color/thirdColor"
            android:textSize="18dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_about"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickLogout">

        <TextView
            android:id="@+id/drawerLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/drawerLogoutName"
            android:textColor="@color/thirdColor"
            android:textSize="18dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_logout"/>

    </LinearLayout>

</LinearLayout>